--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body { @apply bg-color-2 text-color-4 dark:bg-color-4 dark:text-color-2; }
